// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Linked should provide issue and pr as value options by default 1`] = `
[
  "Linked",
]
`;

exports[`Linked should provide issue and pr as value options by default 2`] = `
[
  "Issue",
  "Pull Request",
]
`;

exports[`Linked should provide single value option when initialized with only "issue" 1`] = `
[
  "Linked",
]
`;

exports[`Linked should provide single value option when initialized with only "issue" 2`] = `
[
  "Issue",
]
`;

exports[`Linked should provide single value option when initialized with only "pr" 1`] = `
[
  "Linked",
]
`;

exports[`Linked should provide single value option when initialized with only "pr" 2`] = `
[
  "Pull Request",
]
`;
